k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-rdicidr
  namespace: production
  labels:
    app: rdicidr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rdicidr
  template:
    metadata:
     labels:
        app: rdicidr
    spec:
      containers:
      - name: rdicidr
        image: ahioros/rdicidr:10341496460
        ports:
        - containerPort: 3000
