k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-rdicidr
  namespace: production
spec:
  selector:
    app: rdicidr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
